name:                HaskellSandbox
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/HaskellSandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Min Zhang
maintainer:          mz1 at bcm dot edu
copyright:           2016 Min Zhang
category:            data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , safe >= 0.3
  default-language:    Haskell2010

executable Lamina
  hs-source-dirs:      src
  main-is:             Lamina.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text>=1.2, unordered-containers>=0.2.5, safe >= 0.3, containers>=0.5, bytestring>=0.10, double-conversion>=2.0
  default-language:    Haskell2010

test-suite HaskellSandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellSandbox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HaskellSandbox
